--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="/public/socket.io.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
