--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/public/socket.io.js"></script>
+    <!-- 引用打包好的socket.io 2.4.0版本，  -->
+    <script src="/js/socket.io.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
